# shovel_server

src/connections/local/: CMakeLists.txt  LocalSocket.cpp  LocalSocket.h  main.cpp
src/connections/network/: CMakeLists.txt  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  TCPSocket.cpp  TCPSocket.h  main.cpp
src/connections/workers/: CMakeLists.txt  ConnectionWorker.cpp  ConnectionWorker.h  LocalSocketWorker.cpp  LocalSocketWorker.h  TCPSocketWorker.cpp  TCPSocketWorker.h  main.cpp
src/containers/: CMakeLists.txt  QueueBase.cpp  QueueBase.h  RingQueue.cpp  RingQueue.h  RingQueueBlockDecorators.cpp  RingQueueBlockDecorators.h  RingQueues.h  SizedArray.h  main.cpp
src/parsers/: CMakeLists.txt  Parser.cpp  Parser.h  ParserBase.cpp  ParserBase.h  ParserExample.cpp  ParserExample.h  main.cpp
src/subprocesses/: CMakeLists.txt
src/subprocesses/abstract_subprocess/: AbstractSubprocess.cpp  AbstractSubprocess.h  CMakeLists.txt  main.cpp
src/subprocesses/instance_subprocess_1/: CMakeLists.txt  instance_subprocess_1.cpp  instance_subprocess_1.h  main.cpp
src/subprocesses/instance_subprocess_2/: CMakeLists.txt  instance_subprocess_2.cpp  instance_subprocess_2.h  main.cpp
